--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="eng" dir="ltr">
+
 <head>
     <meta charset="utf-8">
     <title>Drum Kit</title>
@@ -9,23 +10,36 @@
 </head>
 
 <body>
-    <h1 id="title">Drum 🥁 Kit</h1>
-    <div class="instruments">
-        <button class="w drum">w</button>
-        <button class="a drum">a</button>
-
-        <button class="s drum">s</button>
-        <button class="d drum">d</button>
-        <button class="j drum">j</button>
-        <button class="k drum">k</button>
-        <button class="l drum">l</button>
+    <div class="main">
+        <div class="main-container">
+            <div class="main-container-inner">
+                <div class="_inner-container">
+                    <main class="mainSection">
+                        <h1 id="title">Drum 🥁 Kit</h1>
+                        <div class="container">
+                            <div class="instruments">
+                                <button class="w drum">w</button>
+                                <button class="a drum">a</button>
+                                <button class="s drum">s</button>
+                                <button class="d drum">d</button>
+                                <button class="j drum">j</button>
+                                <button class="k drum">k</button>
+                                <button class="l drum">l</button>
+                            </div>
+                        </div>
+                    </main>
+                    <footer>
+                        <div class="footer-container">
+                            <p>Made with ❤️ for my musician friends</p>
+                            <p>© 2023 Kostis Gkriziotis</p>
+                        </div>
+                    </footer>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="index.js" charset="utf-8"></script>
 </body>
-
-<footer>
-    <p>Made with ❤️ for my musician friends</p>
-</footer>
 
 </html>
